--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
+    "emailjs-com": "^2.2.4",
+    "jss-rtl": "^0.2.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-jss": "^8.4.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
