--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@
 # dependencies
 /node_modules
 
-/public
-
 # testing
 /coverage
 
@@ -21,4 +19,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+yarn.lock
 
