--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 # misc
 .DS_Store
 .env.local
-.env.development.local
+.env.development.localgit
 .env.test.local
 .env.production.local
 
@@ -20,7 +20,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-*.lock
-
-*.html
+/.idea
+/public
 
